@@ -1655,7 +1655,7 @@ LIBGED
 SHADED DISPLAYS
 ---------------
 
-* See doc/TODO.shaded_displays
+* See doc/notes/TODO.shaded_displays
 
 
 ARCHER
