@@ -13,6 +13,7 @@ changes made.  See document footer for additional details.
 --- 202X-XX-XX  Release 7.XX.X                                     ---
 ----------------------------------------------------------------------
 
+* added "standardize" option to GED attr command - Cliff Yapp
 * updated dbconcat to use prefix/suffix str for conflicts - Cliff Yapp
 
 
